# MedWASMAI

./: .gitignore  CONTRIBUTING.md  Makefile  README.md
.taskmaster/: state.json
.taskmaster/tasks/: tasks.json
examples/: README.md
examples/minimal-wasm/: Cargo.toml  index.html  main.js
examples/minimal-wasm/src/: lib.rs
examples/wasmedge-onnx/: Cargo.toml  README.md
examples/wasmedge-onnx/guest/: Cargo.toml
examples/wasmedge-onnx/guest/src/: main.rs
examples/wasmedge-onnx/scripts/: download_model.sh
examples/wasmedge-onnx/src/: main.rs
examples/wasmedge-tflite/: .gitignore  Cargo.toml  README.md  run.out
examples/wasmedge-tflite/guest/: Cargo.toml
examples/wasmedge-tflite/guest/src/: main.rs
examples/wasmedge-tflite/scripts/: download_model.sh  run_guest.sh
examples/wasmedge-tflite/src/: main.rs
scripts/: PRD.txt  verify-browser-demo.sh
