[package]
name = "minimal-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Junaidi AI"]
description = "Minimal Rust WASM demo scaffold for MedWASMAI"
repository = "https://github.com/Junaidi-ai/MedWASMAI"
license-file = "../../LICENSE"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
