[package]
name = "onnx-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = { version = "0.11", default-features = false, features = ["auto-color"] }
# Optional: enable real wasi-nn path when the environment supports it
wasi-nn = { version = "0.2", optional = true }

[features]
default = []
# Enable to use wasi-nn ONNX backend inside the guest
onnx-real = ["wasi-nn"]

[[bin]]
name = "onnx-guest"
path = "src/main.rs"
